auto generate thumb if not found

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -5,7 +5,7 @@ services:
         public: false
 
     Lle\AttachmentBundle\Service\AttachmentManager:
-        arguments: ["@doctrine.orm.default_entity_manager", "@kernel", "@parameter_bag"]
+        arguments: ["@doctrine.orm.default_entity_manager", "@kernel", "@parameter_bag", "@router"]
 
     lle.attachment.manager: '@Lle\AttachmentBundle\Service\AttachmentManager'
 
