--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         }
     ],
     "require": {
-        "php": ">=7.2"
+        "php": ">=7.2",
+        "stof/doctrine-extensions-bundle": "^1.3@dev"
     },
     "autoload": {
         "psr-4": { "Lle\\AttachmentBundle\\": "src/" }
