--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     ],
     "require": {
         "php": ">=7.2",
-        "stof/doctrine-extensions-bundle": "^1.3@dev"
+        "stof/doctrine-extensions-bundle": "^1.3@dev",
+        "symfony/mime": "^5.0"
     },
     "autoload": {
         "psr-4": { "Lle\\AttachmentBundle\\": "src/" }
