--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
         "php": ">=7.2",
         "stof/doctrine-extensions-bundle": "^1.3@dev",
-        "symfony/mime": "^5.0"
+        "symfony/mime": "^4.3 || ^5.0"
     },
     "autoload": {
         "psr-4": { "Lle\\AttachmentBundle\\": "src/" }
