--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=7.2",
-        "stof/doctrine-extensions-bundle": "^1.3@dev",
+        "antishov/doctrine-extensions-bundle": "^1.4",
         "symfony/mime": "^4.3 || ^5.0"
     },
     "autoload": {
